[tool.poetry]
name = "pinetree-scan"
version = "0.1.0"
description = ""
authors = ["BE02LEEJAEHOON <ljhx6787@naver.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.10"
tensorflow = "^2.19.0"
opencv-python = "^4.12.0.88"
pandas = "^2.3.1"
exifread = "^3.3.1"
rasterio = "^1.4.3"
scikit-learn = "^1.7.0"
black = "^24.4.2"
isort = "^5.13.2"
ultralytics = "^8.2.0"
torch = "^2.2.0"
folium = "^0.16.0"
pyproj = "^3.6.1"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-multipart = "^0.0.6"
pydantic = "^2.4.2"
python-dotenv = "^1.0.0"
matplotlib = "^3.10.6"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
